     dereferenced into real URLs.  This is a generalization and cleanup of
     the lp: transport lookup.  (Aaron Bentley)

   * Merge directives that are automatically attached to emails have nicer
     filenames, based on branch-nick + revno. (Aaron Bentley)

   * ``push`` has a ``--revision`` option, to specify what revision to push up
     to.  (Daniel Watkins)

  BUGFIXES:

    * Disable plink's interactive prompt for password.
      (#107593, Dmitry Vasiliev)

    * Encode command line arguments from unicode to user_encoding before
      invoking external mail client in `bzr send` command.
      (#139318, Alexander Belchenko)

    * Include quick-start-summary.svg file to python-based installer(s)
      for Windows. (#192924, Alexander Belchenko)

    * lca merge now respects specified files. (Aaron Bentley)

    * Make version-info --custom imply --all. (#195560, James Westby)

    * ``merge --preview`` now works for merges that add or modify
      symlinks (James Henstridge)

    * Redirecting the output from ``bzr merge`` (when the remembered
      location is used) now works. (John Arbash Meinel)

    * setup.py script explicitly checks for Python version.
      (Jari Aalto, Alexander Belchenko, #200569)

    * UnknownFormatErrors no longer refer to branches regardless of kind of
      unknown format. (Daniel Watkins, #173980)

    * Upgrade bundled ConfigObj to version 4.5.2, which properly quotes #
      signs, among other small improvements. (Matt Nordhoff, #86838)

    * Use correct indices when emitting LCA conflicts.  This fixes IndexError
      errors.  (Aaron Bentley, #196780)

  API BREAKS:

    * Support for loading plugins from zip files and
      ``bzrlib.plugin.load_from_zip()`` function are deprecated.
      (Alexander Belchenko)

  TESTING:

    * The branch interface tests were invalid for branches using rich-root
      repositories because the empty string is not a valid file-id.
      (Robert Collins)

  INTERNALS:
